2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap: Add autopoint invocation and fetching of .po files.
	* configure.ac: Bump to GNU gettext 0.17.

	* ABOUT-NLS: Remove.
	* m4/gettext.m4: Remove.
	* m4/iconv.m4: Remove.
	* m4/lib-link.m4: Remove.
	* m4/po.m4: Remove.
	* po/*.po: Remove.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* autogen.sh: Rename to...
	* bootstrap: ... this.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap/*: Remove.
	* configure.ac: Do not create bootstrap/Makefile.
	* Makefile.am: Do not recurse into bootstrap, distribute new files.
	* Makefile.boot: Move from bootstrap/Makefile.try.
	* README-boot: Move from bootstrap/README.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* lib/Makefile.am: Distribute gettext.h.
	* lib/closeout.c: Use it.
	* lib/gettext.h: New.
	* lib/quotearg.c: Use it.
	* lib/xmalloc.c: Use it.
	* src/dfa.c: Use it.
	* src/system.h: Use it.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac.in: Rename...
	* configure.ac: ... to this.  Remove ALL_LINGUAS definition.
	* autogen.sh: Generate po/LINGUAS instead of configure.ac.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac.in: Remove pointless (?) stamp-h rule.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac.in: Remove m4/Makefile creation.
	* Makefile.am: Remove m4 subdirectory.
	* m4/Makefile.am: Remove.
	* m4/codeset.m4: Remove.
	* m4/glibc.m4: Remove.
	* m4/glibc21.m4: Remove.
	* m4/header.m4: Remove.
	* m4/install.m4: Remove.
	* m4/isc-posix.m4: Remove.
	* m4/lcmessage.m4: Remove.
	* m4/sanity.m4: Remove.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac.in (AM_GNU_GETTEXT_VERSION): Bump to 0.17.
	* Makefile.am (EXTRA_DIST): Add build-aux/config.rpath.
	* intl/*: Remove.
	* m4/gettext.m4: Upgrade to gettext-0.17.
	* m4/iconv.m4: Upgrade to gettext-0.17.
	* m4/lib-ld.m4: New file, from gettext-0.17.
	* m4/lib-link.m4: New file, from gettext-0.17.