@@ -14,4 +14,5 @@ Makefile
 Makefile.in
 *.o
 *.a
+*~
 .deps
