@@ -4,4 +4,5 @@ config.sub
 depcomp
 install-sh
 mdate-sh
+missing
 texinfo.tex
