@@ -10,11 +10,15 @@
 /intmax.m4
 /inttypes-pri.m4
 /lcmessage.m4
+/lib-ld.m4
 /lib-link.m4
+/lib-prefix.m4
 /lock.m4
 /longlong.m4
+/nls.m4
 /po.m4
 /printf-posix.m4
+/progtest.m4
 /size_max.m4
 /stdint_h.m4
 /visibility.m4
